--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     />
     <!-- Custom styles -->
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
     <!--region header-->
@@ -55,6 +58,17 @@
             </li>
           </ul>
         </address>
+
+        <button
+          class="menu-toggle-burger js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+          aria-label="Open menu button"
+        >
+          <svg class="menu-toggle-icon" width="32" height="22">
+            <use href="./images/sprite.svg#burger-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <!--end region header-->
@@ -79,7 +93,7 @@
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3>Strategy</h3>
+              <h3 class="features-section-h">Strategy</h3>
               <p class="features-section-p">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -91,7 +105,7 @@
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3>Punctuality</h3>
+              <h3 class="features-section-h">Punctuality</h3>
               <p class="features-section-p">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -103,7 +117,7 @@
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3>Diligence</h3>
+              <h3 class="features-section-h">Diligence</h3>
               <p class="features-section-p">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -115,7 +129,7 @@
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3>Technologies</h3>
+              <h3 class="features-section-h">Technologies</h3>
               <p class="features-section-p">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -124,13 +138,17 @@
           </ul>
         </div>
       </section>
-      <section class="section-two">
+      <section class="section-two hide-section-two">
         <div class="container">
           <h2>What Are We Doing</h2>
           <ul class="section-two-items">
             <li>
               <img
-                src="./images/section-2/pic-1.jpg"
+                srcset="
+                  ./images/section-2/pic-1@1x.jpg 1x,
+                  ./images/section-2/pic-1@2x.jpg 2x
+                "
+                src="./images/section-2/pic-1@1x.jpg"
                 alt="Image of our work"
                 width="360"
                 height="300"
@@ -138,7 +156,11 @@
             </li>
             <li>
               <img
-                src="./images/section-2/pic-2.jpg"
+                srcset="
+                  ./images/section-2/pic-2@1x.jpg 1x,
+                  ./images/section-2/pic-2@2x.jpg 2x
+                "
+                src="./images/section-2/pic-2@1x.jpg"
                 alt="Image of our work"
                 width="360"
                 height="300"
@@ -146,7 +168,11 @@
             </li>
             <li>
               <img
-                src="./images/section-2/pic-3.jpg"
+                srcset="
+                  ./images/section-2/pic-3@1x.jpg 1x,
+                  ./images/section-2/pic-3@2x.jpg 2x
+                "
+                src="./images/section-2/pic-3@1x.jpg"
                 alt="Image of our work"
                 width="360"
                 height="300"
@@ -162,7 +188,11 @@
           <ul class="team-items">
             <li class="team-item">
               <img
-                src="./images/team/team-1.jpg"
+                srcset="
+                  ./images/team/team-1@1x.jpg 1x,
+                  ./images/team/team-1@2x.jpg 2x
+                "
+                src="./images/team/team-1@1x.jpg"
                 alt="Team member"
                 width="264"
                 height="260"
@@ -228,7 +258,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/team-2.jpg"
+                srcset="
+                  ./images/team/team-2@1x.jpg 1x,
+                  ./images/team/team-2@2x.jpg 2x
+                "
+                src="./images/team/team-2@1x.jpg"
                 alt="Team member"
                 width="264"
                 height="260"
@@ -294,7 +328,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/team-3.jpg"
+                srcset="
+                  ./images/team/team-3@1x.jpg 1x,
+                  ./images/team/team-3@2x.jpg 2x
+                "
+                src="./images/team/team-3@1x.jpg"
                 alt="Team member"
                 width="264"
                 height="260"
@@ -360,7 +398,11 @@
             </li>
             <li class="team-item">
               <img
-                src="./images/team/team-4.jpg"
+                srcset="
+                  ./images/team/team-4@1x.jpg 1x,
+                  ./images/team/team-4@2x.jpg 2x
+                "
+                src="./images/team/team-4@1x.jpg"
                 alt="Team member"
                 width="264"
                 height="260"
@@ -515,83 +557,89 @@
       </section>
     </main>
     <!--footer-->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-top">
-          <a class="logo" href="./index.html"
-            ><span class="logo-accent">WEB</span
-            ><span class="logo-footer">STUDIO</span></a
-          >
-          <p class="footer-sm">Social media</p>
-          <p class="footer-subscribe">Subscribe</p>
+    <footer class="page-footer">
+      <div class="container page-footer-flex">
+        <div class="page-footer-container-top">
+          <div class="page-logo-footer-container">
+            <a class="page-logo-footer" href="./index.html">
+              Web<span class="page-logo-footer-part">Studio</span>
+            </a>
+            <p class="page-logo-footer-description">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="network-footer-container">
+            <p class="network-footer-container-title">Social media</p>
+            <ul class="footer-socials">
+              <li class="team-socials-item">
+                <a
+                  class="footer-socials-link"
+                  href="https://instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Link to instagram.com"
+                >
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-socials-item">
+                <a
+                  class="footer-socials-link"
+                  href="https://twitter.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Link to twitter.com"
+                >
+                  <svg class="footer-socials-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-socials-item">
+                <a
+                  class="footer-socials-link"
+                  href="https://facebook.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Link to facebook.com"
+                >
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-socials-item">
+                <a
+                  class="footer-socials-link"
+                  href="https://linkedin.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Link to linkedin.com"
+                >
+                  <svg class="socials-icon" width="24" height="24">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div class="footer-bottom">
-          <p class="footer-paragraph">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-          <ul class="footer-socials">
-            <li class="team-socials-item">
-              <a
-                class="socials-link sm-footer"
-                href="https://instagram.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Link to instagram.com"
-              >
-                <svg class="socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="team-socials-item">
-              <a
-                class="socials-link sm-footer"
-                href="https://twitter.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Link to twitter.com"
-              >
-                <svg class="socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="team-socials-item">
-              <a
-                class="socials-link sm-footer"
-                href="https://facebook.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Link to facebook.com"
-              >
-                <svg class="socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="team-socials-item">
-              <a
-                class="socials-link sm-footer"
-                href="https://linkedin.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Link to linkedin.com"
-              >
-                <svg class="socials-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <form class="email-form" name="subscription">
-            <input
-              class="footer-form-input"
-              type="email"
-              name="user_email"
-              placeholder="E-mail"
-            />
-            <button type="submit" class="footer-btn">
+        <div class="form-footer-container">
+          <p class="form-footer-container-text">Subscribe</p>
+          <form class="form-footer" name="subscribe">
+            <label class="form-footer-label" for="user-email">
+              <input
+                class="footer-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+                id="user-email"
+              />
+            </label>
+            <button class="footer-button" type="submit">
               Subscribe
               <span>
                 <img
@@ -608,6 +656,7 @@
     </footer>
     <!-- #endregion -->
 
+    <!-- ModalButton-->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" type="button" data-modal-close>
@@ -717,6 +766,94 @@
       </div>
     </div>
 
+    <!-- #region Modal-menu -->
+    <div class="menu-container js-menu-container" id="mobile-menu">
+      <button class="menu-toggle js-close-menu" aria-label="Class menu button">
+        <svg class="menu-toggle-icon-x" width="8" height="8">
+          <use href="./images/sprite.svg#close"></use>
+        </svg>
+      </button>
+
+      <ul class="mobile-menu">
+        <li><a href="" class="link active">Studio</a></li>
+        <li><a href="" class="link">Portfolio</a></li>
+        <li><a href="" class="link">Contacts</a></li>
+      </ul>
+      <ul class="mobile-contacts">
+        <li>
+          <a class="link accent" href="tel:+110001111111"
+            >+11 (000) 111-11-11</a
+          >
+        </li>
+        <li>
+          <a class="link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+      </ul>
+      <ul class="mobile-list socials-mobile">
+        <li class="mobile-item">
+          <a
+            class="mobile-link"
+            href="https://instagram.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to instagram.com"
+          >
+            <svg class="mobile-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-item">
+          <a
+            class="mobile-link"
+            href="https://twitter.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to twitter.com"
+          >
+            <svg class="mobile-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-item">
+          <a
+            class="mobile-link"
+            href="https://facebook.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to facebook.com"
+          >
+            <svg class="mobile-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="mobile-item">
+          <a
+            class="mobile-link"
+            href="https://linkedin.com"
+            target="_blank"
+            rel="noopener noreferrer"
+            aria-label="Link to linkedin.com"
+          >
+            <svg class="mobile-icon" width="24" height="24">
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- #region end Modal-menu -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script defer src="js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
   </body>
 </html>
